--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,25 +1,112 @@
-/**
-  |============================
-  | include css partials with
-  | default @import url()
-  |============================
-*/
-@import url('./reset.css');
-@import url('./vite-promo.css');
-@import url('./header.css');
-
-:root {
-  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
-  font-size: 16px;
-  line-height: 24px;
-  font-weight: 400;
-
-  color: #242424;
-  background-color: rgba(255, 255, 255, 0.87);
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
+body {
+  background-color: #FFFFE0;
 }
+
+#search-form {
+  margin: 10px;
+  padding: 10px;
+  text-align: center;
+}
+
+#search-input {
+  border-radius: 12px;
+  width: 272px;
+  height: 40px;
+  padding-left: 16px;
+  border-color: #000000;
+  background-color: #FFFFE0;
+}
+
+#search-input:hover {
+  border-color: #2F4F4F;
+}
+
+#search-input:focus {
+  border-color: #000000;
+  background-color: #FFFFE0;
+  color: #000;
+}
+
+#search-input::placeholder {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+}
+
+button {
+  border-radius: 8px;
+  padding: 8px 16px;
+  width: 91px;
+  height: 40px;
+  background: #2F4F4F;
+  border: #2F4F4F;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #fff;
+}
+
+button:hover {
+  background: #000000;
+}
+
+#gallery {
+  margin-top: 50px;
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 24px;
+  padding: 0;
+  text-align: center;
+  justify-content: center;
+  
+}
+
+.gallery-box {
+  display: flex;
+  flex-direction: column;
+}
+
+.image-info {
+  font-family: 'Montserrat', sans-serif;
+  display: flex;
+  gap: 20px;
+  margin-left: 30px;
+  font-weight: bold;
+}
+
+.info-label {
+  font-weight: 600;
+  font-size: 12px;
+  line-height: 1.33333;
+  letter-spacing: 0.04em;
+  color: #2e2f42;
+  }
+
+.info-value {
+  margin: 0;
+  text-align: center;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 2;
+  letter-spacing: 0.04em;
+  color: #2e2f42;
+}
+
+.loader {
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  display: block;
+  margin: 15px auto;
+  position: relative;
+  color: #fff;
+  /* left: +100; */
+  box-sizing: border-box;
+  animation: shadowRolling 2s linear infinite;
+}
+
