--- a/src/css/header.css
+++ b/src/css/header.css
@@ -18,4 +18,7 @@
 .nav-link:hover,
 .nav-link:focus {
   color: #747bff;
+  transition: transform 250ms linear;
+  box-shadow: 10px 10px 18px -12px rgb(115, 120, 175);
+  transform: scale(1.05);
 }
